fix(permisos): crete module permisos and rol

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -53,7 +53,7 @@
     --color-info-content: #242f39;
 
     --color-success: #33d37b;
-    --color-success-content: #242f39;
+    --color-success-content: #f1f5f9;
 
     --color-warning: #ffc107;
     --color-warning-content: #242f39;
